# agent-registry

./: .gitignore  .npmignore  README.md  dogfood_round3_report.md  install.sh  package.json  templates-hotfix.tgz  test.js  test.sh
.github/workflows/: publish.yml  test.yml
.pr-review-state-round2-failed/: gates.json  pr-review-loop.json
agents/cit-deck-creator/: agent.md
agents/cit-deck-creator/ref/: brand-guidelines.md  lessons-learned.md  slide-patterns.md
agents/code-reviewer/: agent.md
agents/code-reviewer/ref/: review-checklist.md
agents/devops/: agent.md
agents/devops/ref/: ci-cd-reference.md  cloud-architecture.md  deployment-runbook.md
agents/pr-code/: agent.md
agents/pr-fixer/: agent.md
agents/pr-orchestrator/: agent.md
agents/pr-orchestrator/ref/: workflow.md
agents/pr-reviewer/: agent.md
agents/review-pr/: agent.md
behaviors/: safe-revert-on-failure.md
criteria/: all-tests-pass.md  figma-design-match.md  no-new-lint-warnings.md  zero-must-fix-issues.md
handoff/: HANDOFF.md  TEST_FIXTURE.md
lib/: discovery.js  frontmatter.js  profiles.js  test-profiles.js
poc/: package-lock.json
review-fix-engine/: .gitignore  pyproject.toml
review-fix-engine/agents/: reviewer_design.md
review-fix-engine/engine/: agents.py  cli.py  config.py  devserver.py  github.py  grounding.py  merge.py  orchestrator.py  progress.py  steering.py
review-fix-engine/tests/: test_github.py  test_grounding.py  test_merge.py
slides-skill-kit/: Harness_Engineering_CIT.pptx  Harness_Engineering_SDD_Transcript.md
slides/commands/: generate.md
(+10 files in other folders)
